# text2podcast

./: .env.example  .gitignore  QUICKSTART.md  README.md  SIGNING_GUIDE.md  Text2Podcast.spec  build_app.sh  build_instructions.md  create_dmg.sh  entitlements.plist  example_script.txt  main.py  publish.sh  pyproject.toml  sign_and_notarize.sh  verify_mac_signature.sh  verify_signature.sh
docs/: README.md
podcast-scripts/: example_script.txt
